@@ -60,10 +60,10 @@ char *hpd_up =
         "                          --fd - apply filters before recursor descends into subdirectory\n"
         "                          --recursive, -R - traverse the whole <root dir> directory tree\n"
         "                          --xretry - re-start the operation when no results\n"
-        "  -print  <format string>\n"
-        "                        Format output using {var} directives (see DATA_STRUCTURES for a field list)\n"
-        "  -printf <format string>\n"
-        "                        Same as -print, only does not print a new line character at the end\n"
+        "  -print  <format>      Format output using {var} directives (see DATA_STRUCTURES for a field list)\n"
+        "  -printf <format>      Same as -print, only does not print a new line character at the end\n"
+        "  -preprint <format>    Print formatted string before parse operation\n"
+        "  -postprint <format>   Print formatted string after parse operation\n"
         "  --stdin               Read data from stdin\n"
         "\n Input/output:\n"
         "  -e <dirlog|nukelog|dupefile|lastonlog|imdb|game|tvrage|ge1>\n"
